--- a/src/components/IndividualEvents/IndividualEvent.css
+++ b/src/components/IndividualEvents/IndividualEvent.css
@@ -1,127 +1,198 @@
-.individualEvent{
-    height: 100vh;
-    width: 100vw;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../assets/background.png");
-    background-size: cover;
-    filter: brightness(140%);
+.EventContainer {
+    background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2rem 0;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: sans-serif;
+    min-height: 80vh;
+    width: 100vw;
+    max-width: 100vw;
     overflow-x: hidden;
-    
-
+    flex-direction: column;
 }
 
-.logo-wrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    margin-top: 20vh;
+.EventContainer:after {
+    content: "";
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    z-index: 0;
 }
 
-.logo{
-    width: 300px;
-    height: 140px;
-}
-
-.event-wrapper{
-    width: 90%;
+.EventContainerChild {
+    width: 100vw;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-
+    justify-content: flex-start;
+    padding: 1rem;
+    z-index: 1  ;
 }
 
-.event-img-wrapper{
+.eventImage {
     width: 40%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
-.img-container{
-    width: 350px;
-    height: 500px;
-    background-color: #C4C4C4;
-    border-radius: 16px;
-}
-
-.tech{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 16px;
-}
-
-.event-info-wrapper{
+.eventImage>img {
     width: 60%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    border-radius: 5px;
+    height: 90%;
+    max-height: 527px;
 }
 
-.info-container{
-    width: 90%;
-    height: 500px;
+.eventDetails {
+    width: 60%;
+    max-width: 800px;
+    color: white;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    color: whitesmoke;
-
-
+    margin-top: 0.15rem;
+    padding-right: 1rem;
 }
 
-.info-container h1{
-    font-size: 50px;
-    font-weight: 200;
+.eventDetailsTop {
+    width: max-content;
+    max-width: 100%;
 }
 
-.event-details{
+.eventTitle {
+    font-weight: 500;
+    font-size: 3.5rem;
     display: flex;
-    flex-direction: row;
-    gap: 90px;
-    font-size: 17px;
-    font-weight: bolder;
 }
 
-.date{
-    color: #E8257D;
+.eventInfo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    gap: 1rem;
+    flex-wrap: wrap;
+    row-gap: 0;
 }
 
-.event-text p{
-    font-size: 18px;
-    margin-top: 35px;
-
+.eventInfo>div:nth-child(2)>p {
+    color: #fc0160;
 }
 
-.event-managers{
-    color: #1BBEE9;
-    font-size: 17px;
-    font-weight: normal;
+.eventInfo>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
-.register-btn{
-    margin-top: 70px;
-
+.eventInfo>div>div {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #ffffff;
 }
 
-.register-btn button{
-    width: 170px;
-    height: 60px;
+.eventDescription {
+    margin-top: 2rem;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.eventDescription>div>div {
+    display: flex;
+    color: #1bbee9;
+    gap: 0.5rem;
+    align-items: flex-end;
+}
+
+.eventDescription>div>div:nth-child(1) {
+    display: flex;
+    color: #1bbee9;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    line-height: 0.9rem;
+    gap: 0.5rem;
+}
+
+.eventDescription>div>div:nth-child(2) {
+    display: flex;
+    color: #1bbee9;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    line-height: 0.9rem;
+    gap: 0.5rem;
+}
+
+.eventDescription>div>div>p:nth-child(1) {
+    font-weight: 600;
+    margin-bottom: 0.2rem;
+    margin-top: 1rem;
+}
+
+.eventResgisterButton {
+    border: 1px solid white;
     color: white;
     background: transparent;
-    border-radius: 15px;
-    outline: none;
-    font-size: 17px;
-    border: 1px solid whitesmoke;
-    cursor: pointer;
+    width: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    margin-top: 2rem;
+}
+
+@media only screen and (max-width: 426px) {
+    .eventInfo {
+        margin-top: 0;
+    }
+
+    .eventDescription>div>div {
+        flex-direction: column;
+        gap: 0;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .EventContainerChild {
+        flex-direction: column;
+    }
+
+    .eventImage {
+        width: 100%;
+    }
+
+    .eventDetails {
+        width: 100%;
+    }
+
+    .eventTitle {
+        font-size: 3rem;
+    }
+
+    .eventInfo {
+        margin-top: 0;
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    .eventImage>img {
+        width: 250px;
+        min-width: 100px;
+    }
+}
+
+.linkToRegister {
+    width: fit-content;
 }
