--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -124,7 +124,7 @@ hr {
         width: 100px;
         height: 100px;
     }
-
+    
     .name {
         font-size: 18px;
     }
@@ -140,5 +140,97 @@ hr {
 
     .btn-container {
         margin-top: -50px;
+    }
+}
+
+@media screen and (max-width: 524px) and (min-width: 426px) {
+    .profile-img {
+        width: 80px;
+        height: 100px;
+    }
+    .profile-container {
+        width: 85%;
+        height: 85vh;
+    }
+    .youthopia-logo{
+        width: 300px;
+    }
+    .star-1{
+        right: 0.5%;
+        height: 70px;
+    }
+    .star-3{
+        top: 12%;
+        left: 20%;
+        width: 25px;
+    }
+    .star-2{
+        bottom: 2%;
+        left: 4%;
+    }
+    .line-4{
+        bottom: 34%;
+        right: -8%;
+        height: 80px;
+    }
+    .ellipse{
+        bottom: 31%;
+        right: 8%;
+        width: 20px;
+    }
+    .inner-container-2 .row {
+        padding: 0 20px 0 20px;
+    }
+    .btn-container {
+        margin-top: -20px;
+    }
+}
+
+@media (min-width:320px) and (max-width: 425px) {
+    .profile-container {
+        width: 90%;
+        height: 80vh;
+    }
+    .youthopia-logo{
+        width: 280px;
+    }
+    .star-1{
+        right: 0.5%;
+        height: 70px;
+    }
+    .star-3{
+        top: 12%;
+        left: 20%;
+        width: 25px;
+    }
+    .star-2{
+        bottom: 2%;
+        left: 4%;
+    }
+    .line-4{
+        bottom: 34%;
+        right: -8%;
+        height: 80px;
+    }
+    .ellipse{
+        bottom: 31%;
+        right: 11%;
+        width: 20px;
+    }
+    .inner-container-2 {
+        flex-direction: column;
+    }
+    .inner-container-2 .row {
+        padding: 0;
+    }
+    .inner-container-2 .row .heading {
+        font-size: 20px;
+        padding: 10px 0 5px 0;
+    }
+    .inner-container-2 .row .info {
+        font-size: 20px;
+    }
+    .btn-container {
+        margin-top: -10px;
     }
 }
