--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -187,10 +187,10 @@ hr {
     }
 }
 
-@media (min-width:320px) and (max-width: 425px) {
+@media screen and (max-width: 395px) {
     .profile-container {
         width: 90%;
-        height: 80vh;
+        height: 90vh;
     }
     .youthopia-logo{
         width: 280px;
@@ -209,13 +209,13 @@ hr {
         left: 4%;
     }
     .line-4{
-        bottom: 34%;
-        right: -8%;
+        bottom: 35%;
+        right: -6%;
         height: 80px;
     }
     .ellipse{
-        bottom: 31%;
-        right: 11%;
+        bottom: 32%;
+        right: 20%;
         width: 20px;
     }
     .inner-container-2 {
@@ -232,6 +232,7 @@ hr {
         font-size: 20px;
     }
     .btn-container {
-        margin-top: -10px;
+        margin-top: -40px;
     }
 }
+
