--- a/src/pages/Events/Events.css
+++ b/src/pages/Events/Events.css
@@ -1,5 +1,5 @@
 .events {
-    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url('../../assets/background.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('../../assets/background.png');
     position: relative;
     height: 100vh;
     width: 100%;
@@ -20,7 +20,7 @@
 
 .secNavBar>.a {
     color: #F8F8F8;
-    margin:0 20px 0 20px;
+    margin: 0 20px 0 20px;
     font-size: 32px;
     position: relative;
     cursor: pointer;
@@ -41,12 +41,12 @@
         transform: translateX(-50%);
         /* Center the underline */
         transform-origin: 50% 50%;
-        
+
     }
 
     &:hover::after {
         width: 80%;
-        
+
     }
 }
 
@@ -69,69 +69,82 @@
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 } */
-.card-Container{
+.card-Container {
 
     display: grid;
-    grid-template-columns: repeat(3,minmax(10rem,0.5fr));
+    grid-template-columns: repeat(3, minmax(10rem, 0.5fr));
     grid-auto-rows: auto;
     grid-row-gap: 0;
     grid-gap: 1rem;
     margin-left: 10%;
     margin-top: 5%;
-    
-    
+
+
 }
-@media screen and (max-width: 768px){
+
+@media screen and (max-width: 768px) {
     .card-Container {
         grid-template-columns: repeat(1, minmax(10rem, 1fr));
-        margin-left: 25%;  /* For tablets */
+        margin-left: 25%;
+        /* For tablets */
     }
+
     .secNavBar>.a {
         font-size: 3.5vw;
-        margin:0 30px 0 30px;
+        margin: 0 30px 0 30px;
     }
+
     .secNavBar {
         margin: 0px 10px 0px 0%;
     }
+
     .youImg {
         margin: 10vh 0px 0px 0%;
     }
 
 }
-@media screen and (min-width: 768px)  {
+
+@media screen and (min-width: 768px) {
     .card-Container {
         grid-template-columns: repeat(2, minmax(10rem, 1fr));
-        margin-left: 20vw; 
+        margin-left: 20vw;
     }
+
     .youImg {
         margin: 10vh 0px 0px 28%;
     }
+
     .secNavBar>.a {
         font-size: 3.5vw;
-        margin:0 40px 0 40px;
+        margin: 0 40px 0 40px;
     }
+
     .secNavBar {
         margin: 0px 10px 0px 18%;
     }
-    .events{
+
+    .events {
         width: 100%;
-        overflow: hidden;
+        /* overflow: hidden; */
     }
-    
+
 }
 
-@media screen and (min-width: 1025px)  {
+@media screen and (min-width: 1025px) {
     .card-Container {
-        grid-template-columns: repeat(3, minmax(10rem, 0.5fr)); 
+        grid-template-columns: repeat(3, minmax(10rem, 0.5fr));
         margin-left: 12vw;
     }
+
     .youImg {
         margin: 10vh 0px 0px 35%;
     }
+
     .secNavBar>.a {
         font-size: 3.5vw;
-        margin:0 60px 0 60px;
+        margin: 0 60px 0 60px;
     }
+
     .secNavBar {
         margin: 0px 10px 0px 18%;
     }
@@ -139,15 +152,19 @@
 
 @media screen and (min-width: 1366px) {
     .card-Container {
-        grid-template-columns: repeat(3, minmax(10rem, 1fr)); /* For tablets */
+        grid-template-columns: repeat(3, minmax(10rem, 1fr));
+        /* For tablets */
     }
+
     .youImg {
         margin: 10vh 0px 0px 35%;
     }
+
     .secNavBar>.a {
         font-size: 2.5vw;
-        margin:0 120px 0 120px;
+        margin: 0 120px 0 120px;
     }
+
     .secNavBar {
         margin: 0px 10px 0px 18%;
     }
@@ -155,7 +172,8 @@
 
 @media screen and (min-width: 1680px) {
     .card-Container {
-        grid-template-columns: repeat(3, minmax(10rem, 1fr)); /* For tablets */
+        grid-template-columns: repeat(3, minmax(10rem, 1fr));
+        /* For tablets */
     }
 }
 
@@ -168,7 +186,7 @@
 /*  */
 /*  */
 /*  */
-.registre-container{
+.registre-container {
     background-image: url(../../assets/background.png);
     display: flex;
     justify-content: center;
@@ -180,7 +198,8 @@
     flex-direction: column;
 
 }
-.registre{
+
+.registre {
     position: relative;
     background-color: rgba(0, 0, 0, 0.71);
     border-radius: 138px;
@@ -197,14 +216,14 @@
     /* margin: 0vh 20vh 0vh 25vh; */
 }
 
-.registre-text{
+.registre-text {
     width: 80%;
     text-align: center;
     font-size: 40px;
     font-weight: 600;
 }
 
-.registre-btn{
+.registre-btn {
     border-radius: 35px;
     border: 1px solid #FFF;
     width: 180px;
@@ -216,34 +235,34 @@
     margin-top: 50px;
 }
 
-.star-1{
+.star-1 {
     position: absolute;
     top: 0;
     right: 2%;
 
 }
 
-.star-3{
+.star-3 {
     position: absolute;
     top: 18%;
     left: 20%;
     width: 25px;
 }
 
-.star-2{
+.star-2 {
     position: absolute;
     bottom: 3%;
     left: 0;
 
 }
 
-.line-4{
+.line-4 {
     position: absolute;
     bottom: 34%;
     right: -4%;
 }
 
-.ellipse{
+.ellipse {
     position: absolute;
     bottom: 30%;
     right: 4%;
