--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     z-index: 999;
-    padding: 0px 2rem;
+    padding: 0px 0.3rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -131,7 +131,7 @@ a {
     display: block;
     color: transparent;
   }
-  @media (max-width:524px){
+  @media(min-width:324px) and (max-width:424px){
     .hamburger-menu{
       margin-left: -5%;
       margin-top: 2px;
@@ -172,10 +172,10 @@ a {
       display: flex;
       
       top: 0;
-      margin-left: 70%;
+      margin-left: 60%;
       
       gap: 0rem;
-      width: 150px;
+      width: 115px;
       justify-content: center;
       align-items: center;
       /* margin-left: 60%; */
@@ -183,7 +183,7 @@ a {
   .buttonsNav{
     position: absolute;
     top: 0;
-    left: 60%;
+    left: 70%;
     gap: 0;
   } 
 /* .buttonsNav button{
@@ -193,5 +193,70 @@ a {
     margin-top: 0px;
     padding-right: 0;
     padding-left: 5%;
+  }
+  }
+  @media(min-width:426px) and (max-width:524px){
+    .hamburger-menu{
+      margin-left: -5%;
+      margin-top: 2px;
+    }
+    .clickme1{
+      width: 70px;
+      height: 30px;
+      font-size: 10px;
+      padding-bottom: 10px;
+      padding-right: 0;
+      
+      
+    }
+    
+    .clickme2,.profilelog{
+      width: 50%;
+      height: 30px;
+      font-size: 10px;
+      padding-bottom: 10px;
+      padding-right: 0;
+
+    }
+    .profilelog img{
+      width: 90px;
+    }
+    .profilelog{
+      margin-top: 1px;
+    }
+
+    .navbar{
+      display: flex;
+      justify-content: none;
+      align-items: none;
+      width: 90%;
+      
+    }
+    .profilelog {
+      display: flex;
+      
+      top: 0;
+      margin-left: 60%;
+      
+      gap: 0rem;
+      width: 105px;
+      justify-content: center;
+      align-items: center;
+      /* margin-left: 60%; */
+      padding-right: 0;
+  }
+  .buttonsNav{
+    position: absolute;
+    top: 0;
+    left: 70%;
+    gap: 0;
+  } 
+/* .buttonsNav button{
+  padding-right: 25px;
+}*/
+  .navbar{
+    margin-top: 0px;
+    padding-right: 0;
+    padding-left: 0%;
   }
   }
